# cmpl_proj

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  comp_proj.sln
cmake/: proj_helper.cmake
cmpl_lib/: CMakeLists.txt  cmpl.h  cmpl_lib.h  ira.h  ira_dt.c  ira_dt.h  ira_func.c  ira_func.h  ira_inst.c  ira_inst.data  ira_inst.h  ira_int.c  ira_int.h  ira_lo.c  ira_lo.h  ira_optr.c  ira_optr.h  ira_pds.h  ira_pec.c  ira_pec.h  ira_pec_c.c  ira_pec_c.h  ira_pec_ip.c  ira_pec_ip.h  ira_val.c  ira_val.h  lnk.h  lnk_pe.h  lnk_pel.c  lnk_pel.h  lnk_pel_l.c  lnk_pel_l.h  lnk_pel_m.c  lnk_pel_m.h  lnk_sect.c  lnk_sect.h  mc.h  mc_defs.c  mc_defs.h  mc_frag.c  (+70 more)
cmpl_lib/tests/: CMakeLists.txt  any_to_exe.h  cmmn.h  cmpl_zic_test.c  ira_to_exe1.c  lnk_pel_fail1.c  lnk_pel_fail2.c  lnk_to_exe.h  lnk_to_exe1.c  lnk_to_exe2.c  lnk_to_exe3.c  mc_pea_fail1.c  mc_to_exe.h  mc_to_exe1.c  mc_to_exe2.c  pla_enmn_test.pla  pla_file_tester.c  pla_to_exe1.pla  pla_va_test.pla
comp_proj/: comp_proj.vcxproj  comp_proj.vcxproj.filters  test.pla
comp_proj/comp_proj/: asm.h  asm_frag.c  asm_frag.h  asm_inst.c  asm_inst.h  asm_it.c  asm_it.h  asm_pea.c  asm_pea.h  asm_pea_b.c  asm_pea_b.h  asm_reg.c  asm_reg.h  asm_size.c  asm_size.h  gia.h  gia_bs.c  gia_bs.h  gia_bs_lpt.c  gia_bs_lpt.h  gia_bs_p.c  gia_bs_p.h  gia_ecv.c  gia_ecv.h  gia_edit.c  gia_edit.h  gia_pkg.c  gia_pkg.h  gia_prog.c  gia_prog.h  gia_prog_b.c  gia_prog_b.h  gia_prog_p.c  gia_prog_p.h  gia_repo.c  gia_repo.h  gia_repo_lsnr.c  gia_repo_lsnr.h  gia_repo_view.c  gia_repo_view.h  (+102 more)
comp_proj/pla_lib/: w64_kernel32.pla
comp_proj/pla_lib/std/: io.pla
comp_proj/pla_lib/w64/: kernel32.pla
comp_proj/src/: asm.h  asm_frag.c  asm_frag.h  asm_inst.c  asm_inst.h  asm_it.c  asm_pea_b.h  asm_reg.c  asm_reg.h  ira.h  ira_dt.c  ira_dt.h  ira_func.c  ira_func.h  ira_inst.c  ira_inst.def  ira_inst.h  ira_int.c  ira_int.h  ira_lo.c  ira_lo.h  ira_pds.c  ira_pds.def  ira_pds.h  ira_pec.c  ira_pec.h  ira_pec_c.c  ira_pec_c.h  ira_pec_ip.c  ira_pec_ip.h  ira_val.c  ira_val.h  lnk_pe.c  lnk_pe.h  lnk_pe_l.c  lnk_sect.c  lnk_sect.h  main.c  pch.h  pla.h  (+25 more)
ira/: CMakeLists.txt  ira.h  ira_inst.data  ira_int.c  ira_int.h  ira_lib.h  ira_lo.c  ira_pds.c  ira_pds.data  ira_pds.h  ira_pec.h  ira_pec_c.c  ira_pec_c.h  ira_pec_ip.c  ira_pec_ip.h  ira_val.c  pch.h
ira/tests/: CMakeLists.txt  cmmn.h  ira_to_exe.h  ira_to_exe1.c  ira_zic_test.c
lnk/: CMakeLists.txt  lnk.h  lnk_lib.h  lnk_pe.h  lnk_pel_m.c  lnk_sect.c  pch.h
lnk/tests/: CMakeLists.txt  cmmn.h  lnk_pel_fail1.c  lnk_pel_fail2.c  lnk_to_exe.h  lnk_to_exe1.c  lnk_to_exe2.c  lnk_to_exe3.c  lnk_zic_test.c
main_dev/: CMakeLists.txt  gia.h  gia_edit.c  gia_edit.h  gia_repo_view.c  gia_repo_view.h  main.c  pch.h
mc/: CMakeLists.txt  mc.h  mc_defs.h  mc_frag.c  mc_frag.h  mc_inst.h  mc_lib.h  mc_pea.c  mc_pea.h  mc_pea_b.c  mc_pea_b.h  mc_pea_it.c  mc_pea_it.h  mc_reg.c  pch.h
mc/tests/: CMakeLists.txt  cmmn.h  mc_pea_fail1.c  mc_to_exe.h  mc_to_exe1.c  mc_to_exe2.c  mc_zic_test.c
pla_data/: test.pla
pla_data/pla_lib/std/: io.pla
pla_data/pla_lib/w64/: kernel32.pla
ul/: CMakeLists.txt  ul_assert.c  ul_bs.c  ul_bs.h  ul_ec.c  ul_ec_buf.h  ul_ec_fmtr.c  ul_ec_fmtr.h  ul_hs.c  ul_hs.h  ul_hsb.c  ul_hsb.h  ul_json.c  ul_json.h  ul_json_g.h  ul_json_p.c  ul_json_p.h  ul_spawn.c  ul_spawn.h
ul/tests/: CMakeLists.txt  ul_bs_test1.c  ul_hst_test1.c  ul_json_test1.c  ul_zic_test.c
ul_lib/: CMakeLists.txt  pch.h  ul.h  ul_arr.c  ul_arr.h  ul_assert.c  ul_assert.h  ul_bs.c  ul_ec.c  ul_ec.h  ul_ec_buf.c  ul_ec_buf.h  ul_ec_fmtr.c  ul_ec_fmtr.h  ul_ec_prntr.c  ul_ec_prntr.h  ul_ec_rn.c  ul_ec_rn.h  ul_ec_sn.c  ul_ec_sn.h  ul_es.c  ul_es.h  ul_fs.c  ul_fs.h  ul_hs.c  ul_hs.h  ul_hsb.c  ul_hsb.h  ul_hst.c  ul_hst.h  ul_json.c  ul_json.h  ul_json_g.c  ul_json_g.h  ul_json_p.c  ul_json_p.h  ul_lib.h  ul_misc.c  ul_misc.h  ul_ros.h  (+2 more)
ul_lib/tests/: CMakeLists.txt  ul_bs_test1.c  ul_hst_test1.c  ul_json_test1.c  ul_zic_test.c
utility_lib/: utility_lib.vcxproj  utility_lib.vcxproj.filters
utility_lib/utility_lib/: pch.h  ul.h  ul_arr.h  ul_assert.c  ul_es.c  ul_es.h  ul_hs.c  ul_hs.h  ul_hsb.c  ul_hsb.h  ul_hst.c  ul_misc.h  ul_raise.c  ul_raise.h  utility_lib.h
wa_lib/: CMakeLists.txt  pch.h  wa.h  wa_accel.c  wa_accel.h  wa_ctl.c  wa_ctl.h  wa_ctx.c  wa_ctx.h  wa_err.c  wa_err.h  wa_host.c  wa_host.h  wa_lib.h  wa_lib.vcxproj  wa_lib.vcxproj.filters  wa_splt.c  wa_splt.h  wa_style.c  wa_style.h  wa_wcr.c  wa_wcr.h  wa_wnd.c  wa_wnd.h
wa_lib/tests/: CMakeLists.txt  wa_zic_test.c
wa_lib/wa_lib/: pch.h  wa.h  wa_accel.c  wa_accel.h  wa_ctl.c  wa_ctx.c  wa_ctx.h  wa_err.c  wa_err.h  wa_host.c  wa_host.h  wa_splt.c  wa_splt.h  wa_style.c  wa_style.h  wa_wcr.c  wa_wcr.h  wa_wnd.c  wa_wnd.h
