
add_library(cmpl_lib SHARED)

target_sources(cmpl_lib
	PUBLIC
		cmpl.h
		cmpl_lib.h
		ira.h
		ira_dt.h
		ira_func.h
		ira_inst.h
		ira_int.h
		ira_lo.h
		ira_optr.h
		ira_pds.h
		ira_pec.h
		ira_pec_c.h
		ira_pec_ip.h
		ira_val.h
		lnk.h
		lnk_pel.h
		lnk_pel_l.h
		lnk_sect.h
		mc.h
		mc_frag.h
		mc_inst.h
		mc_it.h
		mc_pea.h
		mc_pea_b.h
		mc_reg.h
		mc_size.h
		pch.h
		pla.h
		pla_bs.h
		pla_bs_lpt.h
		pla_cn.h
		pla_dclr.h
		pla_ec.h
		pla_ec_buf.h
		pla_ec_fmtr.h
		pla_ec_rcvr.h
		pla_ec_sndr.h
		pla_expr.h
		pla_keyw.h
		pla_lex.h
		pla_pds.h
		pla_pkg.h
		pla_prsr.h
		pla_punc.h
		pla_repo.h
		pla_repo_lsnr.h
		pla_stmt.h
		pla_tltr.h
		pla_tltr_s.h
		pla_tok.h
		pla_tu.h
		pla_tus.h
	PRIVATE
		ira_dt.c
		ira_func.c
		ira_inst.c
		ira_int.c
		ira_lo.c
		ira_optr.c
		ira_pds.c
		ira_pec.c
		ira_pec_c.c
		ira_pec_ip.c
		ira_val.c
		lnk_pel.c
		lnk_pel_l.c
		lnk_sect.c
		mc_frag.c
		mc_inst.c
		mc_it.c
		mc_pea.c
		mc_pea_b.c
		mc_reg.c
		mc_size.c
		pla_bs.c
		pla_bs_lpt.c
		pla_cn.c
		pla_dclr.c
		pla_ec.c
		pla_ec_buf.c
		pla_ec_fmtr.c
		pla_ec_rcvr.c
		pla_ec_sndr.c
		pla_expr.c
		pla_keyw.c
		pla_lex.c
		pla_pds.c
		pla_pkg.c
		pla_prsr.c
		pla_punc.c
		pla_repo.c
		pla_repo_lsnr.c
		pla_stmt.c
		pla_tltr.c
		pla_tltr_s.c
		pla_tok.c
		pla_tu.c
		pla_tus.c
)

set_proj_trg_props(cmpl_lib PCH_NAME pch.h)

target_link_libraries(cmpl_lib ul_lib Shlwapi.lib)

target_compile_definitions(cmpl_lib PRIVATE CMPL_BUILD_DLL)

add_subdirectory(tests)
